// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cast casts 1`] = `
"#version 450

    vec2 _00_getValue() { return vec2(1.0, 2.0); }
    
vec3 cast() {
  vec3 v = _00_getValue();
  return v.xyx;
}
"
`;

exports[`cast casts and links 1`] = `
"#version 450

    vec2 _00_getValue() { return vec2(1.0, 2.0); }
    
vec3 _01_cast() {
  vec3 v = _00_getValue();
  return v.xyx;
}


    vec3 _01_cast();
    void main() { _01_cast(); }
    "
`;
